Re VIV-10716: Implement finding text in sibling nodes

--- a/src/zeit/content/article/edit/browser/tests/fixtures/replace.html
+++ b/src/zeit/content/article/edit/browser/tests/fixtures/replace.html
@@ -17,8 +17,10 @@
 <ul id="list">
   <li id="list-a">foo</li>
   <li id="list-b">bar</li>
-  <li id="list-c">baz</li>
+  <li id="list-c">foo</li>
 </ul>
+
+<p id="three">foo <b>bar</b> foo <b>foo</b></p>
 
 </div>
 
